kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
