kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
